# hapax-officium

./: .dockerignore  .gitignore  .gitleaks.toml  .zenodo.json  CITATION.cff  CLAUDE.md  Dockerfile  Dockerfile.dev  GOVERNANCE.md  NOTICE.md  README.md  SECURITY.md  agent-architecture.md  codemeta.json  conftest.py  entrypoint-dev.sh  operations-manual.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-fix.yml  ci.yml  claude-review.yml  codebase-map.yml  dependabot-auto-merge.yml  sdlc-implement.yml  (+3 more)
agents/: demo.py  demo_eval.py  demo_models.py  digest.py  drift_detector.py  ingest.py  introspect.py  knowledge_maint.py  management_activity.py  management_briefing.py  management_prep.py  management_profiler.py  meeting_lifecycle.py  review_prep.py  scout.py  simulator.py  status_update.py  system_check.py
cockpit/: __main__.py  runner.py
config/: demo-audiences.yaml  demo-lessons.yaml  workflow-registry.yaml
demo/: __init__.py  models.py
docs/: api-reference.md  containerization-evaluation.md  cross-project-boundary.md  data-architecture.md  document-registry.yaml
logos/: __init__.py  __main__.py  chat.tcss  logos.tcss
officium-web/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: bootstrap-demo.sh  generate_codebase_map.py  index-docs.py  sdlc_axiom_judge.py  sdlc_plan.py  sdlc_review.py  sdlc_triage.py
sdlc/: __init__.py  audit.py  circuit_breaker.py  consistency_check.py  github.py  log.py  trace_export.py
shared/: audit.py  axiom_derivation.py  axiom_patterns.py  axiom_precedents.py  axiom_registry.py  axiom_tools.py  ci_discovery.py  circuit_breaker.py  cli.py  config.py  context_tools.py  cycle_mode.py  document_registry.py  frontmatter.py  knowledge_search.py  langfuse_client.py  langfuse_config.py  langfuse_trace_export.py  management_bridge.py  modification_classifier.py  notify.py  operator.py  ops_live.py  profile_store.py  registry_checks.py  sdlc_github.py  sdlc_log.py  settings.py  simulation.py  simulation_models.py  transcript_parser.py  vault_utils.py  vault_writer.py  working_mode.py
tests/: test_api.py  test_api_cache.py  test_axiom_derivation.py  test_axiom_hooks.py  test_axiom_precedents.py  test_axiom_registry.py  test_axiom_tools.py  test_cli.py  test_cockpit_demos.py  test_config.py  test_config_mutable.py  test_config_ollama_url.py  test_context_tools.py  test_demo_agent.py  test_demo_audiences.py  test_demo_audio_convert.py  test_demo_chapters.py  test_demo_charts.py  test_demo_critique.py  test_demo_custom_persona.py  test_demo_diagrams.py  test_demo_dossier.py  test_demo_eval.py  test_demo_eval_models.py  test_demo_eval_rubrics.py  test_demo_history.py  test_demo_html_player.py  test_demo_illustrations.py  test_demo_integration.py  test_demo_lessons.py  test_demo_models.py  test_demo_models_extended.py  test_demo_narrative.py  test_demo_quality_integration.py  test_demo_readiness.py  test_demo_research.py  test_demo_screencasts.py  test_demo_screenshots.py  test_demo_simulate.py  test_demo_slides.py  (+63 more)
vscode/: CLAUDE.md  README.md  package.json  pnpm-lock.yaml
(+203 files in other folders)
